prototypes/netbird/ytt/ingressroute-netbird-traefik.yaml
#@ load("@ytt:data", "data")
#@ load("app.star", "namespace")
#@ traefikLB = "lb." + data.values.shared.domain
#@ domain = "netbird." + data.values.shared.domain
#@ turn = "turn." + data.values.shared.domain
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbird-traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: #@ traefikLB
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
    - websecure-http3
  routes:
    - kind: Rule
      match: #@ "Host(`{}`) && !PathPrefix(`/api`) && !PathPrefix(`/management`) && !PathPrefix(`/signalexchange`) && !PathPrefix(`/relay`)".format(domain)
      services:
        - name: netbird-traefik-dashboard
          namespace: #@ namespace()
          passHostHeader: true
          port: 80
    - kind: Rule
      match: #@ "Host(`{}`) && PathPrefix(`/api`)".format(domain)
      services:
        - name: netbird-traefik-management
          namespace: #@ namespace()
          passHostHeader: true
          port: 80
    - kind: Rule
      match: #@ "Host(`{}`) && PathPrefix(`/relay`)".format(domain)
      services:
        - name: netbird-traefik-relay
          namespace: #@ namespace()
          passHostHeader: true
          port: 33080
    - kind: Rule
      match: #@ "Host(`{}`) && PathPrefix(`/management`)".format(domain)
      services:
        - name: netbird-traefik-management
          namespace: #@ namespace()
          passHostHeader: true
          port: 80
          scheme: h2c
    - kind: Rule
      match: #@ "Host(`{}`) && PathPrefix(`/signalexchange`)".format(domain)
      services:
        - name: netbird-traefik-signal
          namespace: #@ namespace()
          passHostHeader: true
          port: 80
          scheme: h2c
    - kind: Rule
      match: #@ "Host(`{}`)".format(turn)
      services:
        - name: coturn
          namespace: #@ namespace()
          passHostHeader: true
          #!proxyProtocol:
          #!  version: 1
          port: 55555
          scheme: http
